<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CineVerse</string>
    <string name="widget_continue">Continue watching</string>
    <string name="widget_continue_description">The next episode of every show you are in the middle of, one tap from watched.</string>
    <string name="shortcut_search">Search</string>
    <string name="shortcut_search_long">Search films and series</string>
    <string name="shortcut_list">My List</string>
    <string name="shortcut_list_long">Everything you saved</string>
    <string name="shortcut_next">Up next</string>
    <string name="shortcut_next_long">Carry on where you left off</string>
    <string name="channel_episodes">New episodes</string>
    <string name="channel_releases">Releases</string>
    <string name="widget_upnext">Up next</string>
    <string name="widget_upnext_description">Live countdowns to the next episode of every show you are caught up on.</string>
    <string name="widget_today">CineVerse Today</string>
    <string name="widget_today_description">Your streak and what you have watched today.</string>
    <string name="widget_next">Next episode</string>
    <string name="widget_next_description">The next episode on the way, for the lock screen or the home screen</string>
    <string name="widget_countdown">Episode countdown</string>
    <string name="widget_countdown_description">The next episode of one show, counting down</string>
    <string name="widget_preview_show">Next episode</string>
    <string name="widget_preview_show_two">Another show</string>
    <string name="widget_preview_episode">S2 E4</string>
    <string name="widget_preview_countdown">05:42:18</string>
    <string name="widget_preview_days">In 3 days</string>
    <string name="widget_preview_upnext">Up next</string>
</resources>
